--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.web.locale-resolver=fixed
 
 # Database connection properties
 spring.datasource.url=jdbc:mysql://localhost:3306/musicall
-spring.datasource.username=root
-spring.datasource.password=my-secret-pw
+spring.datasource.username=usuario
+spring.datasource.password=urubu100
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate properties
