--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.web.locale=pt_BR
 spring.web.locale-resolver=fixed
 
 # Database connection properties
-spring.datasource.url=jdbc:mysql://localhost:3306/musicall
+spring.datasource.url=jdbc:mysql://localhost:3333/musicall
 spring.datasource.username=root
-spring.datasource.password=Mpi29*1910
+spring.datasource.password=musicall
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate properties
