--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mysql:latest
     container_name: musicall-db
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: musicall
       MYSQL_DATABASE: musicall
     ports:
       - "3333:3306"
