--- a/newrelic/newrelic.yml
+++ b/newrelic/newrelic.yml
@@ -1,4 +1,4 @@
-# This file configures the New Relic agent.  New Relic monitors
+./mvn# This file configures the New Relic agent.  New Relic monitors
 # Java applications with deep visibility and low overhead.  For more details and additional
 # configuration options visit https://docs.newrelic.com/docs/agents/java-agent/configuration/java-agent-configuration-config-file.
 #
