--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <kotlin.version>1.3.50</kotlin.version>
+        <kotlin.version>1.5.31</kotlin.version> <!-- Use a versão mais recente disponível -->
     </properties>
 
     <dependencies>
@@ -67,6 +67,11 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+            <version>2.12.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -124,6 +129,11 @@
             <version>8.4.0</version>
             <scope>provided</scope>
             <type>zip</type>
+        </dependency>
+        <dependency>
+            <groupId>com.github.kittinunf.fuel</groupId>
+            <artifactId>fuel-coroutines</artifactId>
+            <version>2.3.1</version>
         </dependency>
     </dependencies>
 
